<resources>
    <string name="app_name">World Movies</string>

    <string name="favorites">Favorites</string>
    <string name="watch_later">Watch Later</string>
    <string name="selections">Selections</string>
    <string name="toast_watchlater">Watch later</string>
    <string name="toast_selections">Selections</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="alertdialog_title">Do you want to close App?</string>
    <string name="alertdialog_positive">Yes</string>
    <string name="alertdialog_negative">No</string>
    <string name="snack_favorites">Added to \"Favorites\"</string>
    <string name="snack_favorites_deleted">Deleted from \"Favorites\"</string>
    <string name="home">Home</string>
    <string name="toast_home">Home</string>
    <string name="seach_view_hint">enter film title</string>
    <string name="toast_favorites">Favorites</string>
    <string name="toast_disconnected_internet">Internet is disconnected</string>
    <string name="settings">Settings</string>
    <string name="the_main_screen_selection">The Main Screen Selection</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="permisson_storage">No permission. Please, provide permission</string>
    <string name="download_to_gallery">Saved to Gallery</string>
    <string name="open_gallery">To Gallery</string>
    <string name="toast_onerror_search">Something went wrong</string>
    <string name="toast_battery_is_low">Battery is low</string>
    <string name="toast_charging_connected">Charging connected</string>
    <string name="toast_charging_disconnected">Charging disconnected</string>
    <string name="notify_title_of_film">Don\'t forget to watch</string>
    <string name="toast_available_pro">Only available in the Pro-version</string>
    <string name="watch_the_movie_promo">Watch the Movie</string>
    <string name="watch_promo">Watch</string>


</resources>