<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"
        app:showAsAction="withText" />

    <item
        android:id="@+id/watch_later"
        android:icon="@drawable/ic_watch_later"
        android:title="@string/watch_later"
        app:showAsAction="withText" />

    <item
        android:id="@+id/selections"
        android:icon="@drawable/ic_selections"
        android:title="@string/selections"
        app:showAsAction="withText" />
</menu>